# tp_taller2

./: .gitignore  .travis.yml  README.md
Ejemplos/: Como instalar el sistema de test ( google-mock y google-test )  Como instalar el sistema de test ( google-mock y google-test )~  README.txt
doc/: Formato_requests.txt  Http requests.txt  Modelo de datos.txt  Modelo_de_datos.txt
documentacion/: informe_1.docx  informe_2.odt  informe_3.odt
documentacion/doc_proyecto/source/: cronograma.rst  ctrol_ticketing.rst  ctrol_versiones.rst  division.rst  index.rst  introduccion.rst
documentacion/doc_server/source/: configuracion.rst  docker.rst  ejecucion.rst  index.rst  instalacion.rst  introduccion.rst
documentacion/doc_tecnica/: Makefile
documentacion/doc_tecnica/source/: ambiente.rst  diagramas.rst  index.rst  introduccion.rst  librerias.rst  pruebas.rst  restapi.rst
documentacion/doxygen/: Doxyfile
documentacion/doxygen/html/: CreateFileService_8h_source.html  CreateFolderService_8h_source.html  CreateUserService_8h_source.html  Database_8h_source.html  DeleteFileService_8h_source.html  DeleteFolderService_8h_source.html  File_8h_source.html  Folder_8h_source.html  GetFileService_8h_source.html  GetFolderService_8h_source.html  GetUserService_8h_source.html  HttpResponse_8h_source.html  LoginService_8h_source.html  LogoutService_8h_source.html  MockDatabase_8h_source.html  (+210 more)
otros/: Formato_requests.txt  HowToDocker.txt  README.txt
otros/mydockerbuild/: Dockerfile
src/: ServerUdrive.cpp
src/ClientUDropbox/: local.properties
src/ServerUDropbox/: .gitignore  CMakeLists.txt
src/UdriveClient/: .gitignore  local.properties
src/UdriveServer/: CMakeLists.txt  DataManager.cpp  DataManager.h  Dockerfile  HttpResponse.cpp  HttpResponse.h  RestServer.cpp  RestServer.h  ServiceManager.cpp  ServiceManager.h  User.cpp  User.h
src/UdriveServer/main/: .gitignore  CMakeCache.txt  CMakeLists.txt  DataManager.cpp  DataManager.h  HttpResponse.cpp  HttpResponse.h  Main.cpp  Makefile  RestServer.cpp  RestServer.h  ServiceManager.cpp  ServiceManager.h  Time.cpp  User.cpp  User.h  cmake_install.cmake
src/UdriveServer/main/code/: Main.cpp
src/UdriveServer/main/code/database/: DataManager.cpp  Database.cpp  RocksDatabase.cpp
src/UdriveServer/main/code/resources/: File.cpp  Folder.cpp  User.cpp  Version.cpp
src/UdriveServer/main/code/server/: CreateFileService.cpp  CreateFolderService.cpp  CreateUserService.cpp  GetFolderService.cpp  GetUserService.cpp  HttpResponse.cpp  LoginService.cpp  LogoutService.cpp  RestServer.cpp  Server.cpp  ServerThread.cpp  ServiceFactory.cpp  ServiceManager.cpp  UpdateUserService.cpp
src/UdriveServer/main/code/server/Services/: CreateFileService.cpp  CreateFolderService.cpp  CreateUserService.cpp  DeleteFileService.cpp  DeleteFolderService.cpp  GetFileService.cpp  GetFolderService.cpp  GetUserService.cpp  LoginService.cpp  LogoutService.cpp  NonExistentService.cpp  UpdateFileService.cpp  UpdateFolderService.cpp  UpdateUserService.cpp
src/UdriveServer/main/code/utilities/: Time.cpp  WrapperMongoose.cpp
src/UdriveServer/main/database/: IDENTITY  LOG  LOG.old.1442341962398700  MANIFEST-000006
src/UdriveServer/main/include/database/: DataManager.h  Database.h  MockDatabase.h  RocksDatabase.h
src/UdriveServer/main/include/resources/: File.h  Folder.h  User.h  Version.h
src/UdriveServer/main/include/server/: CreateFileService.h  CreateFolderService.h  CreateUserService.h  GetFolderService.h  GetUserService.h  HttpResponse.h  LoginService.h  LogoutService.h  RestServer.h  Server.h  ServerThread.h  Service.h  ServiceCreator.h  ServiceFactory.h  ServiceManager.h  UpdateUserService.h
src/UdriveServer/main/include/server/Services/: CreateFileService.h  CreateFolderService.h  CreateUserService.h  DeleteFileService.h  DeleteFolderService.h  GetFileService.h  GetFolderService.h  GetUserService.h  LoginService.h  LogoutService.h  NonExistentService.h  Service.h  UpdateFileService.h  UpdateFolderService.h  UpdateUserService.h
src/UdriveServer/main/include/utilities/: Time.h  WrapperMongoose.h
src/UdriveServer/mydockerbuild/: conf.conf
src/UdriveServer/test/: CMakeLists.txt  ServiceFactoryTest.cpp  request_test.py  stress_test.py
src/UdriveServer/test/CreateFileServiceTest/: CMakeLists.txt  CreateFileServiceFixture.h  CreateFileServiceTest.cpp
src/UdriveServer/test/CreateFolderServiceTest/: CMakeLists.txt  CreateFolderServiceFixture.h  CreateFolderServiceTest.cpp
src/UdriveServer/test/CreateUserServiceTest/: CMakeLists.txt  CreateUserServiceFixture.h  CreateUserServiceTest.cpp
src/UdriveServer/test/FileTest/: CMakeLists.txt  FileTest.cpp
src/UdriveServer/test/FolderTest/: CMakeLists.txt  FolderTest.cpp
src/UdriveServer/test/GetFolderServiceTest/: CMakeLists.txt  GetFolderServiceFixture.h  GetFolderServiceTest.cpp
src/UdriveServer/test/GetUserServiceTest/: CMakeLists.txt  GetUserServiceFixture.h  GetUserServiceTest.cpp
src/UdriveServer/test/HttpResponseTest/: CMakeLists.txt  HttpResponseTest.cpp
src/UdriveServer/test/LoginServiceTest/: CMakeLists.txt  LoginServiceFixture.h  LoginServiceTest.cpp
src/UdriveServer/test/LogoutServiceTest/: CMakeLists.txt  LogoutServiceFixture.h  LogoutServiceTest.cpp
src/UdriveServer/test/Mock/: MockDatabase.h  MockWrapperMongoose.h
src/UdriveServer/test/ServiceFactoryTest/: CMakeLists.txt  ServiceFactoryTest.cpp
src/UdriveServer/test/UpdateFileServiceTest/: CMakeLists.txt  UpdateFileServiceFixture.h  UpdateFileServiceTest.cpp
src/UdriveServer/test/UpdateFolderServiceTest/: CMakeLists.txt  UpdateFolderServiceFixture.h  UpdateFolderServiceTest.cpp
src/UdriveServer/test/UpdateUserServiceTest/: CMakeLists.txt  UpdateUserServiceFixture.h  UpdateUserServiceTest.cpp
src/UdriveServer/test/UserTest/: CMakeLists.txt  UserTest.cpp
src/UdriveServer/test/Utils/: Utils.h
src/UdriveServer/test/VersionTest/: CMakeLists.txt  VersionTest.cpp
tp_taller2/: .cproject  .project
tp_taller2/Ejemplos/: README.txt
tp_taller2/doc/: Http requests.txt  Modelo de datos.txt  api.json  leemeApi.txt
(+167 files in other folders)
